...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/description"
        android:layout_width="327dp"
        android:layout_height="350dp"
        android:gravity="center"
        android:textColor="@color/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/updateBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateClick"
        android:background="@drawable/inset"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
...
