...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/bookEditUpdate"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/BtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/inset"
        android:onClick="updClickBtn"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
...
