...
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listView"
        android:layout_width="375dp"
        android:layout_height="525dp"
        android:divider="@color/text"
        android:dividerHeight="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
